--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+grub-imageboot (0.3) unstable; urgency=low
+
+  * Drop suffix .conf from configfile
+
+ -- Alexander Wirt <formorer@debian.org>  Mon, 27 Dec 2010 17:33:36 +0100
+
 grub-imageboot (0.2) unstable; urgency=low
 
   * Add support for configfile 
