--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ grub-imageboot (0.5) unstable; urgency=low
 
   * Update copyright 
   * Depend on syslinux-common instead of syslinux
+  * Explicitly use format 1.0
 
  -- Alexander Wirt <formorer@debian.org>  Mon, 10 Jan 2011 22:40:39 +0100
 
